--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div id="home" class="home-grid">
       <video autoplay loop>
-        <!-- PUT VIDEO HERE -->
+        <!-- PUT VIDEO HERE J-->
         <source src="resources/video_1.mp4" type="video/mp4" />
       </video>
       <div class="home-title">
